# namespace

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  book.toml  flake.nix  foaf.html  index.md  pipelight.toml  requirements.txt  shell.nix
book_src/: 1.0.rss.md  README.md  SUMMARY.md  index.md
docs/: 1.0.md  71-quine.md  blockchain-shards.md  complete-ontology-framework.md  cryptographic-steganography.md  demo.html  flexible-music-publishing.md  formal-verification.md  gandalf-trichotomy.md  hostile-media-embedding.md  layered-acl.md  lean4-integration.md  minizinc-optimal-sharding.md  modular-knowledge-theory.md  monster-coverage.md  monster-symmetry.md  music-metadata-example.md  phase3-bitcoin-nft.md  semantic-blockchain.md  shard-based-access.md  solfunmeme-example.md  url-embedded-programs.md  zkreach.md
docs/pkg/: erdfa_wasm.js  (+1 more)
lean/: lakefile.lean
links/: 2
minizinc/: optimal_sharding.mzn  shard_simple.mzn
publish/: Cargo.toml  INTEGRATION.md
publish/src/: lib.rs
relay/: Cargo.toml
relay/src/: ap.rs  feeds.rs  lib.rs  main.rs  rmq.rs  server.rs  types.rs
scripts/: generate_index.sh  lean4_to_erdfa.py  solve_shards.sh
shards/: shard_0.json  shard_1.json  shard_10.json  shard_11.json  shard_12.json  shard_13.json  shard_14.json  shard_15.json  shard_16.json  shard_17.json  shard_18.json  shard_19.json  shard_2.json  shard_20.json  shard_21.json  shard_22.json  shard_23.json  shard_24.json  shard_25.json  shard_26.json  shard_27.json  shard_28.json  shard_29.json  shard_3.json  shard_30.json  shard_31.json  shard_32.json  shard_33.json  shard_34.json  shard_35.json  shard_36.json  shard_37.json  shard_38.json  shard_39.json  shard_4.json  shard_40.json  shard_41.json  shard_42.json  shard_43.json  shard_44.json  (+31 more)
spec/: draft-dupont-erdfa-spec-01.txt  erdfa-spec-1.0.html
src/: acl.rs  blockchain.rs  coverage.rs  crypto.rs  homomorphic_mixer.rs  json_to_url.py  jsonld_cli.py  jsonurl_cli.py  lean4.rs  lib.rs  modular.rs  shards.rs  stego.rs  symmetry.rs  zk_migration.rs  zkreach.rs
tests/: Makefile  test_001_podcast.html  test_001_podcast.json  test_001_podcast.jsonld  test_001_podcast.jsonld.flattened  test_001_podcast.jsonld.flattened.url  test_001_podcast_blogger.rss  test_002_podcast_escaped.html  test_002_podcast_escaped.ttl  test_002_podcast_escaped_blogger.rss  test_002_podcast_escaped_wordpress.rss  test_003_example.html  test_004_example_escaped.html  test_004_example_escaped.ttl  test_005_shortened_header.html  test_006_erss_embed.html  test_006_erss_embed.rss  test_007_channel_header.html  test_007_channel_header.rss
wasm/: Cargo.toml  deploy.sh  index.html
wasm/src/: lib.rs
wasm/src/codec/: bbs.rs  cbor.rs  cid.rs  dasl.rs  fractran.rs  mod.rs  morse.rs  numbers.rs  stego.rs  store.rs  tape.rs
(+3 files in other folders)
