[package]
name = "erdfa-publish"
version = "0.1.0"
edition = "2021"
description = "Publish RDFa triples as CID-addressed CBOR shards with composable eRDFa URLs"
license = "MIT"
repository = "https://github.com/Escaped-RDFa/namespace"

[dependencies]
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
