[package]
name = "erdfa-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
web-sys = { version = "0.3", features = [
  "Window", "Storage", "Document", "HtmlCanvasElement",
  "CanvasRenderingContext2d", "ImageData",
  "AudioContext", "OscillatorNode", "OscillatorType", "GainNode",
  "AudioDestinationNode", "AudioParam", "AudioScheduledSourceNode",
  "AudioNode",
] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
